# summon

./: .gitignore  .swiftformat  .swiftlint.yml  Bundler.toml  Cargo.toml  Package.swift  README.md  cbindgen.toml  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: release.yml
assets/: summon.icns
docs/: EXTENSION_FORMAT.md  extension-api.md  extension-quick-start.md
scripts/: build-dev.sh  build-release.sh  build.sh  dev.sh  lint-deps.sh  lint.sh  package.sh  pre-commit
src/rust/action_manager/: Cargo.toml
src/rust/action_manager/src/: action.rs  lib.rs  native_extensions.rs  pattern.rs  script_filter.rs
src/rust/app_storage/: Cargo.toml
src/rust/app_storage/src/: lib.rs
src/rust/calculator/: Cargo.toml
src/rust/calculator/src/: lib.rs
src/rust/clipboard_storage/: Cargo.toml
src/rust/clipboard_storage/src/: lib.rs
src/rust/ffi/: Cargo.toml  launcher_ffi.h
src/rust/ffi/src/: lib.rs
src/rust/ffi/src/swift/: ffi.h
src/rust/file_indexer/: Cargo.toml
src/rust/file_indexer/src/: lib.rs
src/rust/search_engine/: Cargo.toml
src/rust/search_engine/src/: file_scanner.rs  fuzzy_matcher.rs  indexer.rs  lib.rs
src/rust/settings_storage/: Cargo.toml
src/rust/settings_storage/src/: lib.rs
src/rust/shared_utils/: Cargo.toml
src/rust/shared_utils/src/: lib.rs
src/rust/snippet_matcher/: Cargo.toml
src/rust/snippet_matcher/src/: lib.rs
src/rust/snippet_storage/: Cargo.toml
src/rust/snippet_storage/src/: lib.rs
src/rust/storage_utils/: Cargo.toml
src/rust/storage_utils/src/: lib.rs
src/swift/: SummonApp.swift
src/swift/Managers/: ActionManager.swift  Caches.swift  ClipboardManager.swift  CommandRegistry.swift  HotKeyMonitor.swift  QueryHistoryManager.swift  Snippet.swift  SnippetExpander.swift  StatusBarManager.swift
src/swift/Models/: ExtensionManifest.swift
src/swift/Settings/: Settings.swift  SettingsView.swift
src/swift/Settings/Tabs/: Appearance.swift  Clipboard.swift  Commands.swift  General.swift  Search.swift  Shortcuts.swift
src/swift/Storage/: ClipboardStorage.swift  SnippetStorage.swift
src/swift/UI/: ActionsList.swift  ClipboardPreview.swift  ContentView+Actions.swift  ContentView.swift  Dropdown.swift  ExtensionInfoView.swift  FloatingPanel.swift  FolderPicker.swift  FontPicker.swift  ResultRow.swift  SearchField.swift  SettingsRow.swift  SimpleExtensionCreator.swift  SnippetsList.swift  UIUtils.swift  WebSearchesList.swift
src/swift/UI/Components/: Button.swift  Dropdown.swift  FolderPicker.swift  FontPicker.swift  FormField.swift  ListItem.swift  RadioGroup.swift  RangeSlider.swift  SearchField.swift  SettingRowWithDescription.swift  SettingsRow.swift  ShortcutRecorderView.swift  StyledButton.swift  Switch.swift  ThemeCard.swift  ToggleRow.swift
src/swift/UI/ContentView/: AppManagementCoordinator.swift  ClipboardCoordinator.swift  SearchCoordinator.swift
src/swift/UI/Extensions/: ExtensionButton.swift  ExtensionCreator.swift  ExtensionInfoView.swift  ExtensionTester.swift
src/swift/UI/Settings/: ExtensionsView.swift  WebSearchesList.swift
src/swift/Utils/: ActionIconGenerator.swift  AppConstants.swift  AppInfoDisplay.swift  AppSettings+Fonts.swift  ContextualHints.swift  Debouncer.swift  DesignTokens.swift  FFIHandle.swift  FFIHelpers.swift  KeyCodeMapping.swift  KeyboardShortcuts.swift  NotificationNames.swift  SearchMetrics.swift  ShortcutManager.swift  StoragePathManager.swift  StringExtensions.swift  Theme+Colors.swift  UserDefaultsExtensions.swift  ViewModifiers.swift  WebIconDownloader.swift
src/swift/Wrappers/: Calculator.swift  DictionaryService.swift  FFIBridge.swift  SearchEngine.swift  SnippetMatcher.swift
