[workspace]
members = [
    "src/rust/search_engine",
    "src/rust/snippet_matcher",
    "src/rust/calculator",
    "src/rust/clipboard_storage",
    "src/rust/snippet_storage",
    "src/rust/app_storage",
    "src/rust/settings_storage",
    "src/rust/storage_utils",
    "src/rust/ffi",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["adi-sen"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bitcode = "0.6"
rkyv = { version = "0.7", features = ["validation"] }
nucleo-matcher = "0.3.1"
fuzzy-matcher = "0.3.7"
lru = "0.12"
libc = "0.2"
parking_lot = "0.12.4"
mimalloc = "0.1.47"
rustc-hash = "2.0"
smallvec = "1.13"
compact_str = { version = "0.8", features = ["serde"] }
paste = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
