[workspace]
members = [
    "src/rust/search_engine",
    "src/rust/snippet_matcher",
    "src/rust/calculator",
    "src/rust/clipboard_storage",
    "src/rust/snippet_storage",
    "src/rust/app_storage",
    "src/rust/settings_storage",
    "src/rust/storage_utils",
    "src/rust/shared_utils",
    "src/rust/action_manager",
    "src/rust/ffi",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["adi-sen"]
publish = false

[workspace.lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
unsafe_op_in_unsafe_fn = "deny"
unused_unsafe = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Safety and correctness
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"

# Code quality
must_use_candidate = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
multiple_crate_versions = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.6"
bincode = "1.3"
bitcode = "0.6"
rkyv = { version = "0.8.12", features = ["bytecheck"]}
nucleo-matcher = "0.3.1"
fuzzy-matcher = "0.3.7"
lru = "0.16"
libc = "0.2"
parking_lot = "0.12.4"
mimalloc = "0.1.47"
rustc-hash = "2.0"
smallvec = "1.13"
compact_str = { version = "0.9", features = ["serde"] }
paste = { package = "pastey", version = "0.1" }
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
