[package]
name = "action_manager"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rkyv.workspace = true
bytecheck = "0.8"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
sonic-rs = "0.5"
parking_lot = "0.12"
urlencoding = "2.1"
lru = { workspace = true }
rustc-hash = { workspace = true }
aho-corasick = "1.1"
wait-timeout = "0.2"

storage_utils = { path = "../storage_utils" }
shared_utils = { path = "../shared_utils" }

[lints]
workspace = true
