[package]
name = "app_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
rkyv.workspace = true
bytecheck.workspace = true
storage_utils = { path = "../storage_utils" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
