[package]
name = "clipboard_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rkyv.workspace = true
bytecheck = "0.8"
serde.workspace = true
parking_lot.workspace = true
storage_utils = { path = "../storage_utils" }

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
