[package]
name = "clipboard_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
rkyv.workspace = true
bytecheck.workspace = true
serde.workspace = true
parking_lot.workspace = true
storage_utils = { path = "../storage_utils" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
[package.metadata.cargo-machete]
ignored = ["serde", "parking_lot"]
