[package]
name = "ffi"
version.workspace = true
edition.workspace = true

[dependencies]
search_engine = { path = "../search_engine" }
snippet_matcher = { path = "../snippet_matcher" }
calculator = { path = "../calculator" }
clipboard_storage = { path = "../clipboard_storage" }
snippet_storage = { path = "../snippet_storage" }
app_storage = { path = "../app_storage" }
settings_storage = { path = "../settings_storage" }
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
parking_lot.workspace = true
mimalloc.workspace = true
rustc-hash.workspace = true
compact_str.workspace = true
paste.workspace = true

[lib]
name = "ffi"
crate-type = ["staticlib", "cdylib"]
