[package]
name = "ffi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
search_engine = { path = "../search_engine" }
snippet_matcher = { path = "../snippet_matcher" }
calculator = { path = "../calculator" }
clipboard_storage = { path = "../clipboard_storage" }
snippet_storage = { path = "../snippet_storage" }
app_storage = { path = "../app_storage" }
settings_storage = { path = "../settings_storage" }
action_manager = { path = "../action_manager" }
file_indexer = { path = "../file_indexer" }
serde.workspace = true
sonic-rs.workspace = true
libc.workspace = true
parking_lot.workspace = true
mimalloc.workspace = true
compact_str.workspace = true
paste.workspace = true

[lib]
name = "ffi"
crate-type = ["staticlib"]

[package.metadata.cargo-machete]
ignored = ["serde"]

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
indexing_slicing = "allow"
