[package]
name = "file_indexer"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rkyv.workspace = true
bytecheck.workspace = true
parking_lot.workspace = true
compact_str.workspace = true
rustc-hash.workspace = true
serde.workspace = true
storage_utils = { path = "../storage_utils" }
notify = "8.2"
notify-debouncer-full = "0.6"
crossbeam-channel = "0.5"
unicode-normalization = "0.1"

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]
