[package]
name = "search_engine"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
nucleo-matcher.workspace = true
lru.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
compact_str.workspace = true
smallvec.workspace = true
walkdir.workspace = true
rayon = "1.10"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true
