[package]
name = "search_engine"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
nucleo-matcher.workspace = true
lru.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
compact_str.workspace = true
smallvec.workspace = true
walkdir.workspace = true
rayon = "1.10"
file_indexer = { path = "../file_indexer" }

[lib]
crate-type = ["staticlib", "rlib"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints.clippy]
indexing_slicing = "allow"
