[package]
name = "snippet_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
uuid = { version = "1.0", features = ["v4"] }
storage_utils = { path = "../storage_utils" }

[dev-dependencies]
tempfile = "3.8"
