[package]
name = "snippet_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
rkyv.workspace = true
bytecheck.workspace = true
serde.workspace = true
serde_json = "1.0"
parking_lot.workspace = true
uuid = { version = "1.0", features = ["v4"] }
storage_utils = { path = "../storage_utils" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
[package.metadata.cargo-machete]
ignored = ["serde", "parking_lot"]
