[package]
name = "storage_utils"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rkyv.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3.8"
bytecheck = "0.8"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true
