[package]
name = "storage_utils"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rkyv.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
bytecheck.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[lints]
workspace = true
